lab1/Test/L1-A-13-20.output
Error Type A at Line 2
Error Type B at Line 2
Error Type B at Line 5
Error Type B at Line 6
Error Type B at Line 10
Error Type B at Line 12
Error Type A at Line 19
Error Type A at Line 22
Error Type B at Line 24
Error Type A at Line 26
Error Type B at Line 29
Error Type B at Line 30
Error Type B at Line 31
Error Type B at Line 34
Error Type A at Line 43
