lab1/Test/L1-A-13-20.cmm
int GTm ( int b3oH4wkn6Kt ) {
:  M2M8s ;!= 
  ufQR1 ;
  ESe ;
  ;
  kX if ;
  dW7ScI7E34 ;
  VIce7l7KKW68AdA ;
  if ( I_fwteyLNBblXeniu20o )   Q7HO9dqhzzApNHZW ;
else   if ( yulqn )   if DYRoH32a )   if ( ycWfXJVWKpFJqk 
    )   ODgS ;
else   while QYfSIYAETALH )   return y_ ;





}
%int kYGM , xT2XlSK15bTGT83OGlT 

;
&int ;
struct dzz8vUEl8R6LFMyEAZ {
}< DZ7dFD 
;
struct :{
  struct LMUkXR6 ASoK8dnIrcXqx ;
};
int l if ( ) {
  if Fy_9X7zYylP6wpB ) {
    float f01Shpij else [ 1521413608 ] = jo2m0KsD 
      , nAiI10l_SWLLMZH ;
    Oa3NY31q68GtH48wrA || EIGlg3a8 != C4Eynx3izzz 
      * ! rQTO_ ( ubKO , mWy = B && <= RsvsioO49w_5IBgK 
      - ( cVQrvC7kp_aDx = Z < H + uWiWqQjpYtRxs6QFl7dx * 
      - NNPXNsl7xdRNO [ BYJqUsCay4LZx2zq08ol == Kqjw1iD1rVMCr_lMfww0 
      > KrZHoNS - pPFrXmXnYM * h >= xez5wSwjMUG * cq5H_T 
      && ! 2137369284 . gqw21VWTROKF3qmD / 1053177286.142405484 
      . fHPyVnv2TxgyYNM ] ) ) / - ! Ib3EjYAkYU7z2XFag ( 
      ) ;
  }
}
int KVNTJpamgit3sHVBSJ ( 'int TfJC , int H6_TIk4Zdy 
  ) {
}
int ;
